# aiops-platform

./: .gitignore  CLAUDE.md  README.md  README_COMPLETE.md  UNFINISHED_FEATURES.md  package-lock.json  package.json
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
aiops-ai-engine/: Dockerfile  pyproject.toml  requirements.txt
aiops-ai-engine/app/: config.py  dependency.py  main.py
aiops-ai-engine/app/agent/: orchestrator.py
aiops-ai-engine/app/api/: __init__.py
aiops-ai-engine/app/core/: exceptions.py  utils.py
aiops-ai-engine/app/infrastructure/: doris.py  prometheus.py  redis.py
aiops-ai-engine/app/llm/: client.py  glm5.py  streaming.py
aiops-ai-engine/app/mcp/: executor.py  registry.py
aiops-ai-engine/app/mcp/tools/: __init__.py  get_topology.py  query_metrics.py  search_cases.py  search_logs.py
aiops-ai-engine/app/middleware/: logging.py  tenant.py
aiops-ai-engine/app/models/: analysis.py  request.py
aiops-ai-engine/tests/: conftest.py  test_orchestrator.py
aiops-control-plane/: build.gradle  pom.xml
aiops-dashboard/: .env.example  .prettierignore  index.html  package.json  vite.config.ts
docs/: 01_Architecture_Design.md  02_API_Specification.md  03_Database_Design.md  04_MCP_Tools.md  05_Java_Control_Plane.md  06_Python_AI_Engine.md  07_Frontend_Dashboard.md  08_Deployment_Ops.md  09_Log_Parser_Design.md  10_Auth_Permission.md  11_Test_Specification.md  12_HA_DR_Design.md  13_Capacity_Planning.md  14_Data_Lifecycle.md  15_Telemetry_Tracing.md  AUDIT_LOG_GUIDE.md
(+103 files in other folders)
