[project]
name = "aiops-ai-engine"
version = "1.0.0"
description = "AI-powered diagnostic engine for AIOps platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "openai>=1.12.0",
    "redis>=5.0.0",
    "aioredis>=2.0.1",
    "aiomysql>=0.2.0",
    "aiokafka>=0.9.0",
    "pymilvus>=2.3.0",
    "sentence-transformers>=2.3.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
